--- a/assets/pages/_layout.jade
+++ b/assets/pages/_layout.jade
@@ -1,7 +1,8 @@
 doctype html
 html(lang="ru" ng-app='maketAPP')
   head
-    title Jade title
+    block title
+     title Jade title
 
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
