--- a/assets/pages/_layout.jade
+++ b/assets/pages/_layout.jade
@@ -27,6 +27,7 @@ html(lang="ru" ng-app='maketAPP')
     link(rel="shortcut icon", href="img/favicon.png", type="image/x-icon")
 
     link(href="css/bootstrap.css", rel="stylesheet")
+    link(href="css/modfiles.css", rel="stylesheet")
     link(href="css/style.css", rel="stylesheet")
 
     |<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
