--- a/assets/pages/_layout.jade
+++ b/assets/pages/_layout.jade
@@ -46,6 +46,8 @@ html(lang="ru" ng-app='maketAPP')
       block content
     block footer
 
+    script(src="js/jquery.js")
+    script(src="js/bootstrap.js")
     script(src="js/main.js")
 
     block script
