--- a/assets/pages/style.jade
+++ b/assets/pages/style.jade
@@ -5,5 +5,6 @@ block title
 
 block content
   .container
-    .row
-      include ../components/stylePage/_button
+    include ../components/stylePage/_button
+    include ../components/stylePage/_typography
+    include ../components/stylePage/_column&modal
