fix button style guide

--- a/assets/components/stylePage/_button.jade
+++ b/assets/components/stylePage/_button.jade
@@ -1,4 +1,5 @@
-.col-xs-6
-  button(type="button").btn Hello
-.col-xs-6
-  p описание
+.row
+  .col-xs-6
+    button(type="button").btn Hello
+  .col-xs-6
+    p описание
