--- a/assets/pages/_layout.jade
+++ b/assets/pages/_layout.jade
@@ -1,5 +1,5 @@
 doctype html
-html(lang="ru" ng-app='maketAPP')
+html(lang="en")
   head
     block title
      title Jade title
@@ -44,6 +44,7 @@ html(lang="ru" ng-app='maketAPP')
 
     .container
       block content
+
     block footer
 
     script(src="js/jquery.js")
