add custom selector

--- a/assets/scss/common/_var.scss
+++ b/assets/scss/common/_var.scss
@@ -1,7 +1,7 @@
+//custom selector
+@custom-selector :--headers h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6;
+
 //color varaabless
 $main: #E64A19;
 $white: lighten( desaturate( adjust-hue( #E64A19, -14deg ), 80 ), 50 ); // #fff
 $black: darken( desaturate( adjust-hue( #E64A19, -14deg ), 80 ), 50 ); // #000
-
-//font variabless
-
