--- a/assets/scss/common/_base.scss
+++ b/assets/scss/common/_base.scss
@@ -1,3 +1,12 @@
 body{
   font-family: 'Roboto';
 }
+
+:--headers{
+  &:first-child{
+    margin-top: 0px;
+  }
+  &:last-child{
+    margin-bottom: 0px;
+  }
+}
