--- a/assets/pages/_layout.jade
+++ b/assets/pages/_layout.jade
@@ -38,14 +38,17 @@ html(lang="en")
     |<![endif]-->
 
     block style
+    block header_script
 
   body
     block header
+      include ../components/header/_header
 
     .container
       block content
 
     block footer
+      include ../components/footer/_footer
 
     script(src="js/jquery.js")
     script(src="js/bootstrap.js")
