--- a/assets/components/stylePage/_typography.jade
+++ b/assets/components/stylePage/_typography.jade
@@ -1,48 +1,53 @@
-.row
-  .col-xs-6
-    H1 Heading 1
-  .col-xs-6
-    p 36px
+.container(block="sg-typography")
+  .row(elem='section')
+    .col-xs-12(elem="section-col")
+      H1(elem="section-title") Typography 
 
-.row
-  .col-xs-6
-    H2 Heading 2
-  .col-xs-6
-    p 30px
+  .row(elem='section')
+    .col-xs-6
+      H1 Heading 1
+    .col-xs-6
+      p 36px
+
+  .row(elem='section')
+    .col-xs-6
+      H2 Heading 2
+    .col-xs-6
+      p 30px
 
 
-.row
-  .col-xs-6
-    H3 Heading 3
-  .col-xs-6
-    p 27px
+  .row(elem='section')
+    .col-xs-6
+      H3 Heading 3
+    .col-xs-6
+      p 27px
 
-.row
-  .col-xs-6
-    H4 Heading 4
-  .col-xs-6
-    p 24px
+  .row(elem='section')
+    .col-xs-6
+      H4 Heading 4
+    .col-xs-6
+      p 24px
 
-.row
-  .col-xs-6
-    p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-  .col-xs-6
-    p 14px, line-height 24px
+  .row(elem='section')
+    .col-xs-6
+      p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    .col-xs-6
+      p 14px, line-height 24px
 
-.row
-  .col-xs-6
-    H2 List Icon 
-  .col-xs-6
-    p Добавить
+  .row(elem='section')
+    .col-xs-6
+      H2 List Icon 
+    .col-xs-6
+      p Добавить
+      
+  .row(elem='section')
+    .col-xs-6
+      H2 Message Box 
+    .col-xs-6
+      p Добавить
 
-.row
-  .col-xs-6
-    H2 Message Box 
-  .col-xs-6
-    p Добавить
-
-.row
-  .col-xs-6
-    H2 Block Quotes 
-  .col-xs-6
-    p Добавить
+  .row(elem='section')
+    .col-xs-6
+      H2 Block Quotes 
+    .col-xs-6
+      p Добавить
