--- a/assets/components/stylePage/_column&modal.jade
+++ b/assets/components/stylePage/_column&modal.jade
@@ -1,51 +1,56 @@
-.row
-  .col-xs-12
-    H2.border-title Colomn 12
-  .col-xs-12
-    p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+.container(block="sg-column-modal")
+  .row(elem="section")
+    .col-xs-12(elem="section-col")
+      h1(elem="section-title") Column & Modal
 
-.row
-  .col-xs-12
-    H2.border-title Colomn 6-6
-  .col-xs-6
-    p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
-  .col-xs-6
-    p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+  .row(elem="section")
+    .col-xs-12(elem="section-col")
+      H2(elem="title-block") Column 12
+    .col-xs-12(elem="section-col")
+      p(elem="style-p") Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
 
-.row
-  .col-xs-12
-    H2.border-title Colomn 4-4-4
-  .col-xs-4
-    p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
-  .col-xs-4
-    p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
-  .col-xs-4
-    p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+  .row(elem="section")
+    .col-xs-12(elem="section-col")
+      H2(elem="title-block") Column 6-6
+    .col-xs-6(elem="section-col")
+      p(elem="style-p") Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+    .col-xs-6(elem="section-col")
+      p(elem="style-p") Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
 
-.row  
-  .col-xs-12
-    H2.border-title Colomn 3-3-3-3
-  .col-xs-3
-    p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
-  .col-xs-3
-    p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
-  .col-xs-3
-    p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
-  .col-xs-3
-    p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+  .row(elem="section")
+    .col-xs-12(elem="section-col")
+      H2(elem="title-block") Column 4-4-4
+    .col-xs-4(elem="section-col")
+      p(elem="style-p") Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+    .col-xs-4(elem="section-col")
+      p(elem="style-p") Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+    .col-xs-4(elem="section-col")
+      p(elem="style-p") Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
 
-.row
-  .col-xs-12
-    H2.border-title Colomn 2-2-2-2-2-2
-  .col-xs-2
-   p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem totam earum, ad vero praesentium aut.
-  .col-xs-2
-   p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis amet, praesentium adipisci distinctio cupiditate nam.
-  .col-xs-2
-   p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum consequuntur, ad, debitis voluptas error eaque!
-  .col-xs-2
-   p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur nesciunt voluptatibus, non adipisci odio fugiat!
-  .col-xs-2
-   p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, quod assumenda deserunt enim praesentium? Distinctio.
-  .col-xs-2
-   p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus quos, aperiam aspernatur, nemo dolor totam!
+  .row(elem="section")  
+    .col-xs-12(elem="section-col")
+      H2(elem="title-block") Column 3-3-3-3
+    .col-xs-3(elem="section-col")
+      p(elem="style-p") Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+    .col-xs-3(elem="section-col")
+      p(elem="style-p") Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+    .col-xs-3(elem="section-col")
+      p(elem="style-p") Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+    .col-xs-3(elem="section-col")
+      p(elem="style-p") Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+
+  .row(elem="section")
+    .col-xs-12(elem="section-col")
+      H2(elem="title-block") Column 2-2-2-2-2-2
+    .col-xs-2(elem="section-col")
+     p(elem="style-p")  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem totam earum, ad vero praesentium aut.
+    .col-xs-2(elem="section-col")
+     p(elem="style-p")  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis amet, praesentium adipisci distinctio cupiditate nam.
+    .col-xs-2(elem="section-col")
+     p(elem="style-p")  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum consequuntur, ad, debitis voluptas error eaque!
+    .col-xs-2(elem="section-col")
+     p(elem="style-p")  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur nesciunt voluptatibus, non adipisci odio fugiat!
+    .col-xs-2(elem="section-col")
+     p(elem="style-p")  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, quod assumenda deserunt enim praesentium? Distinctio.
+    .col-xs-2(elem="section-col")
+     p(elem="style-p")  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus quos, aperiam aspernatur, nemo dolor totam!
