--- a/assets/components/stylePage/stylePage.scss
+++ b/assets/components/stylePage/stylePage.scss
@@ -1,5 +1,28 @@
-.border-title{
-  margin: 40px 0 20px 0;
-  padding: 20px 0 20px 20px;
-  background-color: #f2f2f2;
+.sg-typography{
+  &__section{
+    margin-top: 50px;
+  }
+  &__section-col{
+    margin-bottom: 10px;
+  }
+  &__section-title{
+  }
+}
+
+.sg-column-modal{
+  &__section{
+    margin-top: 50px;
+  }
+  &__section-col{
+    margin-bottom: 10px;
+  }
+  &__section-title{
+  }
+  &__title-block{
+    padding: 25px 0 25px 20px;
+    background-color: #f2f2f2;
+  }
+  &__style-p{
+    margin-top: 20px;
+  }
 }
