add fontastic icon

--- a/assets/components/header/_header.jade
+++ b/assets/components/header/_header.jade
@@ -1,4 +1,8 @@
 header(block="header")
   .container(elem="container")
     .row(elem="row")
+      .col-xs-6(elem="col")
+        a(href="index.html")
+          img(src="img/logo.svg", alt="header logo")
+      .col-xs-6(elem="col")
 
