--- a/assets/components/stylePage/_button.jade
+++ b/assets/components/stylePage/_button.jade
@@ -1,5 +1,7 @@
 .row
   .col-xs-6
-    button(type="button").btn Hello
+    button(type="button").btn.btn-main Hello
+    br
+    button(type="button").btn.btn-main.big Hello big
   .col-xs-6
     p описание
