--- a/assets/components/stylePage/_typography.jade
+++ b/assets/components/stylePage/_typography.jade
@@ -1,7 +1,7 @@
 .container(block="sg-typography")
   .row(elem='section')
     .col-xs-12(elem="section-col")
-      H1(elem="section-title") Typography 
+      H1(elem="section-title") Typography
 
   .row(elem='section')
     .col-xs-6
@@ -36,18 +36,22 @@
 
   .row(elem='section')
     .col-xs-6
-      H2 List Icon 
-    .col-xs-6
-      p Добавить
-      
-  .row(elem='section')
-    .col-xs-6
-      H2 Message Box 
+      H2 List Icon
     .col-xs-6
       p Добавить
 
   .row(elem='section')
     .col-xs-6
-      H2 Block Quotes 
+      H2 Message Box
     .col-xs-6
       p Добавить
+
+  .row(elem='section')
+    .col-xs-6
+      H2 Block Quotes
+
+      blockquote
+        p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
+        footer Someone famous in Source Title
+    .col-xs-6
+      //- p Добавить
