--- a/assets/scss/common/_base.scss
+++ b/assets/scss/common/_base.scss
@@ -1,5 +1,6 @@
 body{
   font-family: 'Roboto';
+  border-top: 2px #999 solid;
 }
 
 :--headers{
@@ -10,3 +11,4 @@ body{
     margin-bottom: 0px;
   }
 }
+
