--- a/assets/scss/common/_var.scss
+++ b/assets/scss/common/_var.scss
@@ -5,3 +5,6 @@
 $main: #E64A19;
 $white: lighten( desaturate( adjust-hue( #E64A19, -14deg ), 80 ), 50 ); // #fff
 $black: darken( desaturate( adjust-hue( #E64A19, -14deg ), 80 ), 50 ); // #000
+
+//header variabless
+$header-height: 100px;
